plugins {
    id 'java'
}

version '1.11'

sourceCompatibility = 1.11

repositories {
    mavenCentral()
}

dependencies {
    testCompile('org.junit.jupiter:junit-jupiter-api:5.3.2')
}

compileJava {
    options.with {
        compilerArgs.addAll(['--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'])
        compilerArgs.addAll(['--add-exports', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'])
    }
}